refactor: 重构项目模块命名
- 将 mysystem-common重命名为 linn-common
-将 mysystem-dependency 重命名为 linn-dependency
- 将 mysystem-modules 重命名为 linn-modules
- 将 mysystem-startup 重命名为 linn-startup
- 更新了相关 pom.xml 文件中的 artifactId 和 parent 标签

--- a/linn-common/pom.xml
+++ b/linn-common/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.limyel</groupId>
-        <artifactId>mysystem</artifactId>
+        <artifactId>linn</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>mysystem-common</artifactId>
+    <artifactId>linn-common</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>common-core-starter</module>
