--- a/linn-common/common-core-starter/pom.xml
+++ b/linn-common/common-core-starter/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.limyel</groupId>
-        <artifactId>mysystem-common</artifactId>
+        <artifactId>linn-common</artifactId>
         <version>${revision}</version>
     </parent>
 
