--- a/linn-modules/pom.xml
+++ b/linn-modules/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.limyel</groupId>
+        <artifactId>linn</artifactId>
+        <version>${revision}</version>
+    </parent>
 
-    <groupId>com.limyel</groupId>
-    <artifactId>mysystem-dependency</artifactId>
-    <version>${revision}</version>
+    <artifactId>linn-modules</artifactId>
     <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <revision>0.0.1</revision>
-
-        <spring-boot.version>2.7.18</spring-boot.version>
     </properties>
 
 </project>
