build(linn-common): 初始化 common-core-starter 模块并添加依赖管理
- 在 common-core-starter 模块中添加 Spring Boot相关依赖
- 在 linn-dependency 模块中添加 Spring Cloud 和 MapStruct 依赖管理- 更新根 pom.xml，添加阿里云 Maven 仓库和 linn-dependency 依赖管理

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,29 @@
         <revision>0.0.1</revision>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://maven.aliyun.com/repository/central</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.limyel</groupId>
+                <artifactId>linn-dependency</artifactId>
+                <version>${revision}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
