feat(core): 添加全局异常处理功能
- 新增 BasicErrorAttributes 类以自定义错误属性
- 新增 GlobalExceptionHandler 类实现全局异常处理
- 在 linn-common 中添加 ExceptionHandlerAutoConfig 自动配置类
- 更新 linn-dependency 和 linn-startup 的 pom 文件，添加 common-core-starter 依赖- 在 linn-startup 中创建 LinnApplication 类作为启动类

--- a/linn-dependency/pom.xml
+++ b/linn-dependency/pom.xml
@@ -52,6 +52,12 @@
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.limyel</groupId>
+                <artifactId>common-core-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
