feat(project): 新增 linn-life 和 linn-wiki 模块
- 在 linn-modules 下添加 linn-life 和 linn-wiki 两个新模块
- 新增 linn-life-api 和 linn-life-biz 子模块
- 更新 linn-dependency 和 linn-startup 的 pom 文件
- 配置 Spring Boot Maven 插件

--- a/linn-modules/linn-life/linn-life-biz/pom.xml
+++ b/linn-modules/linn-life/linn-life-biz/pom.xml
@@ -5,16 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.limyel</groupId>
-        <artifactId>linn</artifactId>
+        <artifactId>linn-life</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>linn-modules</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>linn-life</module>
-        <module>linn-wiki</module>
-    </modules>
+    <artifactId>linn-life-biz</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
