--- a/linn-modules/linn-life/linn-life-api/pom.xml
+++ b/linn-modules/linn-life/linn-life-api/pom.xml
@@ -5,16 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.limyel</groupId>
-        <artifactId>linn</artifactId>
-        <version>${revision}</version>
+        <artifactId>linn-life</artifactId>
+        <version>0.0.1</version>
     </parent>
 
-    <artifactId>linn-modules</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>linn-life</module>
-        <module>linn-wiki</module>
-    </modules>
+    <artifactId>linn-life-api</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
