feat(common): 重构 common-core-starter 模块
- 移除 GlobalErrorCode 接口
- 新增 ErrorCodeConstant 接口，定义全局错误码
- 重构 GlobalExceptionHandler，支持自定义异常处理
- 新增 ApiOperationLog 注解和相关切面类，用于日志记录
- 更新 R 类，简化返回结果的创建
- 新增 logback 配置文件，支持日志按天滚动- 更新依赖关系，调整模块间的依赖结构

--- a/linn-dependency/pom.xml
+++ b/linn-dependency/pom.xml
@@ -53,9 +53,22 @@
                 <version>${mapstruct.version}</version>
             </dependency>
 
+            <!-- linn-common -->
             <dependency>
                 <groupId>com.limyel</groupId>
                 <artifactId>common-core-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <!-- linn-modules -->
+            <dependency>
+                <groupId>com.limyel</groupId>
+                <artifactId>linn-life-biz</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.limyel</groupId>
+                <artifactId>linn-life-api</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
@@ -75,6 +88,15 @@
                             </exclude>
                         </excludes>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>repackage</id>
+                            <goals>
+                                <!-- 将依赖的 jar 一起打包 -->
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
