--- a/linn-startup/pom.xml
+++ b/linn-startup/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.limyel</groupId>
-            <artifactId>common-core-starter</artifactId>
+            <artifactId>linn-life-biz</artifactId>
         </dependency>
     </dependencies>
 
