feat(linn): 切换端口并集成 Knife4j
- 将应用端口从 8080 改为 8000
- 移除 profiles.active 的占位符，固定为 dev
- 重构异常处理相关代码，改用 ErrorCodeConstant- 集成 Knife4j 作为 Swagger 的替代方案
- 新增 Knife4jAutoConfig 自动配置类
- 创建测试用例 TestController

--- a/linn-dependency/pom.xml
+++ b/linn-dependency/pom.xml
@@ -20,6 +20,7 @@
         <spring-cloud-alibaba.version>2021.0.6.0</spring-cloud-alibaba.version>
 
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <knife4j.version>4.5.0</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +54,12 @@
                 <version>${mapstruct.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+
             <!-- linn-common -->
             <dependency>
                 <groupId>com.limyel</groupId>
@@ -63,12 +70,12 @@
             <!-- linn-modules -->
             <dependency>
                 <groupId>com.limyel</groupId>
-                <artifactId>linn-life-biz</artifactId>
+                <artifactId>linn-blog-biz</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.limyel</groupId>
-                <artifactId>linn-life-api</artifactId>
+                <artifactId>linn-blog</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
