--- a/linn-common/common-core-starter/pom.xml
+++ b/linn-common/common-core-starter/pom.xml
@@ -49,6 +49,11 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
