--- a/linn-modules/linn-blog/pom.xml
+++ b/linn-modules/linn-blog/pom.xml
@@ -5,24 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.limyel</groupId>
-        <artifactId>linn-life</artifactId>
+        <artifactId>linn-modules</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>linn-life-biz</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>linn-blog</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>linn-blog-api</module>
+        <module>linn-blog-biz</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.limyel</groupId>
-            <artifactId>common-core-starter</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
