feat(linn-common): 添加 MyBatis 支持
- 新增 common-mybatis-starter 模块
- 配置 MyBatis Plus 和 Flyway
- 实现基础实体类和字段自动填充- 添加分页插件
-

--- a/linn-common/pom.xml
+++ b/linn-common/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>common-core-starter</module>
+        <module>common-mybatis-starter</module>
     </modules>
 
     <properties>
