--- a/linn-dependency/pom.xml
+++ b/linn-dependency/pom.xml
@@ -21,6 +21,10 @@
 
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <knife4j.version>4.5.0</knife4j.version>
+
+        <mybatis-plus.version>3.5.12</mybatis-plus.version>
+        <mysql.version>8.4.0</mysql.version>
+        <flyway.version>11.10.5</flyway.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +62,28 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+
+            <!-- db -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-jsqlparser</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>${flyway.version}</version>
             </dependency>
 
             <!-- linn-common -->
