--- a/linn-startup/src/main/resources/application-dev.yml
+++ b/linn-startup/src/main/resources/application-dev.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/linn?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-#    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    url: jdbc:p6spy:mysql://192.168.200.214:3307/linn?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
     hikari:
       maximum-pool-size: 10
       minimum-idle: 10
