--- a/linn-common/common-mybatis-starter/pom.xml
+++ b/linn-common/common-mybatis-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.limyel</groupId>
+        <groupId>linn</groupId>
         <artifactId>linn-common</artifactId>
         <version>${revision}</version>
     </parent>
@@ -36,7 +36,12 @@
 
         <dependency>
             <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
         </dependency>
     </dependencies>
 
