--- a/linn-startup/pom.xml
+++ b/linn-startup/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.limyel</groupId>
+        <groupId>linn</groupId>
         <artifactId>linn</artifactId>
         <version>${revision}</version>
     </parent>
@@ -20,7 +20,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.limyel</groupId>
+            <groupId>linn</groupId>
             <artifactId>linn-blog-biz</artifactId>
         </dependency>
     </dependencies>
