--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.limyel</groupId>
+    <groupId>linn</groupId>
     <artifactId>linn</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
@@ -13,6 +13,7 @@
         <module>linn-common</module>
         <module>linn-modules</module>
         <module>linn-startup</module>
+        <module>linn-security</module>
     </modules>
 
     <properties>
@@ -62,7 +63,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.limyel</groupId>
+                <groupId>linn</groupId>
                 <artifactId>linn-dependency</artifactId>
                 <version>${revision}</version>
                 <type>pom</type>
