refactor(linn-common): 重构项目并添加 Redis 支持- 修改了多个模块的 groupId从 linn 到 com - 重命名了部分模块的 artifactId - 更新了模块之间的依赖关系 - 删除了 linn-security 相关模块 - 新增了 common-redis-starter 模块，用于支持 Redis

--- a/linn-common/common-security-starter/pom.xml
+++ b/linn-common/common-security-starter/pom.xml
@@ -4,18 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>linn</groupId>
-        <artifactId>linn</artifactId>
+        <groupId>com</groupId>
+        <artifactId>linn-common</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>linn-security</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>linn-security-api</module>
-        <module>linn-spring-security-starter</module>
-        <module>linn-security-starter</module>
-    </modules>
+    <artifactId>common-security-starter</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
