--- a/linn-common/common-redis-starter/pom.xml
+++ b/linn-common/common-redis-starter/pom.xml
@@ -4,17 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>linn</groupId>
-        <artifactId>linn-security</artifactId>
-        <version>${revision}</version>
+        <groupId>com</groupId>
+        <artifactId>linn-common</artifactId>
+        <version>0.0.1</version>
     </parent>
 
-    <artifactId>linn-security-starter</artifactId>
+    <artifactId>common-redis-starter</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>common-core-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
