--- a/linn-common/pom.xml
+++ b/linn-common/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>linn</groupId>
+        <groupId>com</groupId>
         <artifactId>linn</artifactId>
         <version>${revision}</version>
     </parent>
@@ -14,6 +14,8 @@
     <modules>
         <module>common-core-starter</module>
         <module>common-mybatis-starter</module>
+        <module>common-security-starter</module>
+        <module>common-redis-starter</module>
     </modules>
 
     <properties>
