--- a/linn-common/common-redis-starter/pom.xml
+++ b/linn-common/common-redis-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com</groupId>
+        <groupId>com.lyxh</groupId>
         <artifactId>linn-common</artifactId>
         <version>0.0.1</version>
     </parent>
@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com</groupId>
+            <groupId>com.lyxh</groupId>
             <artifactId>common-core-starter</artifactId>
         </dependency>
     </dependencies>
