--- a/linn-common/common-security-starter/pom.xml
+++ b/linn-common/common-security-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com</groupId>
+        <groupId>com.lyxh</groupId>
         <artifactId>linn-common</artifactId>
         <version>${revision}</version>
     </parent>
@@ -20,7 +20,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com</groupId>
+            <groupId>com.lyxh</groupId>
             <artifactId>common-core-starter</artifactId>
         </dependency>
     </dependencies>
