--- a/linn-modules/linn-sys/linn-sys-api/pom.xml
+++ b/linn-modules/linn-sys/linn-sys-api/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.lyxh</groupId>
-        <artifactId>linn-modules</artifactId>
-        <version>${revision}</version>
+        <artifactId>linn-sys</artifactId>
+        <version>0.0.1</version>
     </parent>
 
-    <artifactId>linn-sys</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>linn-sys-biz</module>
-        <module>linn-sys-api</module>
-    </modules>
+    <artifactId>linn-sys-api</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
