refactor(common): 删除多个不再使用的类和配置
删除了以下文件中的类和配置：
- `ApiOperationLog.java`- `ApiOperationLogAspect.java`
- `ApplicationContextHolder.java`
- `AutoPrefixUrlMapping.java`
- `BaseDO.java`
- `BizException.java`
- `CommonResponseDataAdvice.java`
- `CosmoController.java`- `DateFormatUtils.java`- `DefaultEnvironmentPostProcessor.java`
- `DefaultFieldHandler.java`
- `ErrorCode.java`- `ErrorCodeConstant.java`- `ExceptionHandlerAutoConfig.java`
- `IBaseDO.java`
- `JacksonAutoConfig.java`
- `JsonUtil.java`
- `Knife4jAutoConfig.java`
- `LinnBeanUtils.java`
- `LinnConstant.java`
- `LinnExceptionHandler.java`
- `LocalDateFormatUtils.java`
- `LocalDateTimeModule.java`
- `MybatisAutoConfig.java`同时更新了`MenuDO.java`，添加了新的字段。

--- a/linn-dependency/pom.xml
+++ b/linn-dependency/pom.xml
@@ -105,6 +105,16 @@
             <!-- linn-modules -->
             <dependency>
                 <groupId>com.lyxh</groupId>
+                <artifactId>linn-sys-biz</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lyxh</groupId>
+                <artifactId>linn-sys-api</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lyxh</groupId>
                 <artifactId>linn-blog-biz</artifactId>
                 <version>${revision}</version>
             </dependency>
