--- a/linn-common/common-redis-starter/pom.xml
+++ b/linn-common/common-redis-starter/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.lyxh</groupId>
         <artifactId>linn-common</artifactId>
-        <version>0.0.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>common-redis-starter</artifactId>
