refactor: 更新项目包名和 Maven 组 ID
- 将项目包名从 com.lyxh 修改为 com.haoyuan- 将 Maven 组 ID从 com.lyxh 修改为 com.haoyuan
- 更新了多个模块的包名和依赖引用

--- a/linn-common/common-redis-starter/pom.xml
+++ b/linn-common/common-redis-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.lyxh</groupId>
+        <groupId>com.haoyuan</groupId>
         <artifactId>linn-common</artifactId>
         <version>${revision}</version>
     </parent>
@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.lyxh</groupId>
+            <groupId>com.haoyuan</groupId>
             <artifactId>common-core-starter</artifactId>
         </dependency>
     </dependencies>
