--- a/linn-modules/pom.xml
+++ b/linn-modules/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.lyxh</groupId>
+        <groupId>com.haoyuan</groupId>
         <artifactId>linn</artifactId>
         <version>${revision}</version>
     </parent>
@@ -27,12 +27,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.lyxh</groupId>
+            <groupId>com.haoyuan</groupId>
             <artifactId>common-core-starter</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.lyxh</groupId>
+            <groupId>com.haoyuan</groupId>
             <artifactId>common-mybatis-starter</artifactId>
         </dependency>
     </dependencies>
